Fix page height overflow issue in flex layout.

--- a/app/assets/stylesheets/forgecms/admin/_header.scss
+++ b/app/assets/stylesheets/forgecms/admin/_header.scss
@@ -14,6 +14,7 @@
       background-color: #F8F8F8;
       font-size: 1.3em;
       height: $header-height;
+      width: $sidebar-full-width;
       .logo {
         font-weight: bold;
       }
