--- a/app/assets/stylesheets/forgecms/admin/_sidebar.scss
+++ b/app/assets/stylesheets/forgecms/admin/_sidebar.scss
@@ -1,7 +1,6 @@
 .admin {
   .main-sidebar {
     background-color: $sidebar-bg-color;
-    min-height: 100%;
     width: $sidebar-full-width;
     flex: 0 0 auto;
 
